--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -5,7 +5,7 @@
 
   // mobile screen
   @media screen and (min-width: 480px) {
-    width: $minMobile;
+    width: 320px;
   }
 
   // tablet screen
