--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -43,6 +43,7 @@
 
   &__list {
     position: relative;
+    overflow: hidden;
 
     margin: 0 auto;
 
@@ -50,7 +51,6 @@
     height: 130px;
     border-radius: 8px;
     overflow: hidden;
-    outline: 1px solid black;
 
     @include only-tablet {
       width: 704px;
@@ -67,15 +67,45 @@
 
   &__picture {
     position: absolute;
-    top: 0;
-    left: 0;
+    left: -50%;
+    right: -50%;
+    bottom: -50%;
+    top: -50%;
+    margin: auto;
+    opacity: 0;
+    animation: $animationTime * $numberGalleryImages fadeImage infinite;
+    animation-fill-mode: forwards;
 
     // flex is used for object-fit to work with picture
     display: flex;
-
+    object-fit: cover;
     width: 100%;
     height: 100%;
+  }
 
-    object-fit: cover;
+  &__picture:nth-child(1) {
+    animation-delay: $animationTime * 0;
+    opacity: 1;
+  }
+  &__picture:nth-child(2) {
+    animation-delay: $animationTime * 1;
+  }
+  &__picture:nth-child(3) {
+    animation-delay: $animationTime * 2;
+  }
+}
+
+@keyframes fadeImage {
+  0% {
+    opacity: 0;
+  }
+  3% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 1;
+  }
+  37% {
+    opacity: 0;
   }
 }
