--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -15,6 +15,7 @@ $timeColor: #907e82;
 $rightsColor: #7a7a7a;
 $phoneContactColor: #ffffff;
 $buttonTextColor: #000000;
+$paginationBulletColor: #d9d9d9;
 
 // Background colors
 $mainBgColor: #84a178;
