--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -229,7 +229,7 @@ body {
   }
 }
 
-section:not(.hero, .products, .about, .advantages),
+section:not(.hero, .products, .about, .advantages, .gallery),
 footer {
   outline: 1px solid tomato;
 }
@@ -241,7 +241,7 @@ footer {
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    width: 320px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -591,6 +591,7 @@ footer {
   }
 }
 .hero__container {
+  position: relative;
   padding-top: 38px;
   display: flex;
   flex-direction: column;
@@ -598,9 +599,8 @@ footer {
 }
 @media screen and (min-width: 768px) {
   .hero__container {
-    position: relative;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -613,7 +613,17 @@ footer {
     padding-top: 14px;
   }
 }
+@media screen and (max-width: 767px) {
+  .hero__plate-picture, .hero__details, .hero__outlet-list {
+    display: none;
+  }
+}
 .hero__wrap {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.hero__left-wrap {
   max-height: 100%;
   display: flex;
   flex-direction: column;
@@ -672,66 +682,6 @@ footer {
 .hero__button-item:not(:last-child) {
   margin-right: 12px;
 }
-.hero__plate-wrap {
-  display: flex;
-  align-items: center;
-}
-@media screen and (max-width: 767px) {
-  .hero__plate-picture, .hero__text-wrap, .hero__outlet-list {
-    display: none;
-  }
-}
-.hero__plate-picture {
-  z-index: 3;
-  margin-right: 32px;
-}
-@media screen and (min-width: 1200px) {
-  .hero__plate-picture {
-    margin-right: 16px;
-  }
-}
-.hero__plate-img {
-  -webkit-animation: spin 5s linear;
-          animation: spin 5s linear;
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .hero__plate-img {
-    width: 152px;
-    height: 152px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .hero__plate-img {
-    width: 225px;
-    height: 225px;
-  }
-}
-.hero__text-wrap {
-  position: relative;
-}
-.hero__details {
-  z-index: 99;
-  width: 139px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.4166666667;
-  color: #fcfcfc;
-  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (min-width: 1200px) {
-  .hero__details {
-    width: 200px;
-    font-size: 14px;
-    line-height: 1.4285714286;
-  }
-}
-.hero__summary {
-  z-index: 99;
-  cursor: pointer;
-  display: list-item;
-  fill: #fcfcfc;
-  list-style-image: url("../images/icons/long-arrow-40-1.svg");
-}
 .hero__outlet-list {
   margin-top: 14px;
 }
@@ -778,37 +728,17 @@ footer {
     line-height: 1.2142857143;
   }
 }
-.hero__img-wrap {
-  margin: 0 auto;
-  position: relative;
-  width: 320px;
-  height: 217px;
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .hero__img-wrap {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 768px;
-    height: 329px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .hero__img-wrap {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 1200px;
-    height: 560px;
-  }
+.hero__img-dots {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 .hero__img-ice-cream {
   position: absolute;
   bottom: 0;
-  left: 26%;
-  z-index: 3;
+  left: 83px;
+  z-index: 2;
   width: 177px;
-  height: 100%;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero__img-ice-cream {
@@ -822,31 +752,73 @@ footer {
     left: 652px;
   }
 }
-.hero__img-dots {
+.hero__plate-picture {
   position: absolute;
-  bottom: 0;
-  left: 0;
   z-index: 2;
-  width: 100%;
+  margin-right: 32px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__plate-picture {
+    left: 32px;
+    bottom: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__plate-picture {
+    left: 16px;
+    bottom: 65px;
+    margin-right: 16px;
+  }
+}
+.hero__plate-img {
+  -webkit-animation: spin 5s linear;
+          animation: spin 5s linear;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__plate-img {
+    width: 152px;
+    height: 152px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__plate-img {
+    width: 225px;
+    height: 225px;
+  }
+}
+.hero__details {
+  position: absolute;
+  z-index: 99;
+  font-weight: 400;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__details {
+    left: 216px;
+    bottom: 24px;
+    width: 139px;
+    font-size: 12px;
+    line-height: 1.4166666667;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__details {
+    left: 257px;
+    bottom: 103px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+}
+.hero__summary {
+  z-index: 99;
+  cursor: pointer;
+  display: list-item;
+  fill: #fcfcfc;
+  list-style-image: url("../images/icons/long-arrow-40-1.svg");
 }
 
-@-webkit-keyframes details-animation {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes details-animation {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+/* Spin animation for plate in hero */
 @-webkit-keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -1496,12 +1468,12 @@ footer {
 }
 .gallery__list {
   position: relative;
+  overflow: hidden;
   margin: 0 auto;
   width: 280px;
   height: 130px;
   border-radius: 8px;
   overflow: hidden;
-  outline: 1px solid black;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .gallery__list {
@@ -1519,15 +1491,65 @@ footer {
 }
 .gallery__picture {
   position: absolute;
-  top: 0;
-  left: 0;
+  left: -50%;
+  right: -50%;
+  bottom: -50%;
+  top: -50%;
+  margin: auto;
+  opacity: 0;
+  -webkit-animation: 21s fadeImage infinite;
+          animation: 21s fadeImage infinite;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
   display: flex;
-  width: 100%;
-  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.gallery__picture:nth-child(1) {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  opacity: 1;
+}
+.gallery__picture:nth-child(2) {
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+.gallery__picture:nth-child(3) {
+  -webkit-animation-delay: 14s;
+          animation-delay: 14s;
 }
 
+@-webkit-keyframes fadeImage {
+  0% {
+    opacity: 0;
+  }
+  3% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 1;
+  }
+  37% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeImage {
+  0% {
+    opacity: 0;
+  }
+  3% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 1;
+  }
+  37% {
+    opacity: 0;
+  }
+}
 /* === REVIEWS ==== */
 .reviews__container {
   padding-top: 48px;
@@ -1545,39 +1567,52 @@ footer {
     padding-bottom: 144px;
   }
 }
-.reviews__list {
-  position: relative;
-  margin: 0 auto;
+.reviews__swiper {
+  margin: 0 auto 40px;
   width: 280px;
-  height: 442px;
-  outline: 1px solid black;
+  height: 478px;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .reviews__list {
+  .reviews__swiper {
     width: 704px;
     height: 312px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .reviews__list {
+  .reviews__swiper {
     width: 968px;
     height: 317px;
   }
 }
+.reviews__swiper-wrapper {
+  margin-bottom: 24px;
+  width: 100%;
+  height: 442px;
+}
+.reviews__swiper-pagination {
+  margin-top: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reviews .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #d9d9d9;
+  border-radius: 50%;
+  opacity: 1;
+}
+.reviews .swiper-pagination-bullet:not(:last-child) {
+  margin-right: 18px;
+}
+.reviews .swiper-pagination-bullet-active {
+  background-color: #84a178;
+}
 .reviews__item {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-}
-.reviews__item:nth-child(1) {
-  display: none;
-}
-.reviews__item:nth-child(2) {
-  display: none;
 }
 .reviews__thumb {
   margin-bottom: 32px;
