--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1553,19 +1553,24 @@ body {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .reviews__container {
     padding-top: 40px;
-    padding-bottom: 124px;
+    padding-bottom: 80px;
   }
 }
 @media screen and (min-width: 1200px) {
   .reviews__container {
     padding-top: 60px;
-    padding-bottom: 144px;
+    padding-bottom: 100px;
   }
 }
 .reviews__swiper {
-  margin: 0 auto 40px;
-  width: 280px;
+  margin: 0 auto;
+  width: 300px;
   height: 478px;
+}
+@media screen and (max-width: 1199px) {
+  .reviews__swiper {
+    margin-left: -5px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .reviews__swiper {
@@ -1607,7 +1612,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 300px;
 }
 .reviews__thumb {
   margin-bottom: 32px;
@@ -2831,5 +2836,66 @@ footer {
     margin-bottom: 32px;
     font-size: 16px;
     line-height: 1.375;
+  }
+}
+
+#scroll-btn {
+  z-index: 999;
+  opacity: 0;
+  width: 40px;
+  height: 40px;
+  color: #fcfcfc;
+  background-color: #f8d24e;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border: 2px solid #907e82;
+  border-radius: 50%;
+  font: bold 20px monospace;
+  transition: opacity 500ms, transform 500ms;
+  transition: color 1000ms cubic-bezier(0.4, 0, 0.2, 1), background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  #scroll-btn {
+    width: 60px;
+    height: 60px;
+    font: bold 40px monospace;
+  }
+}
+#scroll-btn:hover {
+  color: #f8d24e;
+  background-color: #fcfcfc;
+}
+
+#scroll-btn.show {
+  opacity: 1;
+  transition: opacity 1s, transform 1s;
+  -webkit-animation: pulse 2s ease-in-out;
+          animation: pulse 2s ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
   }
 }/*# sourceMappingURL=index.css.map */
