--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -7,19 +7,24 @@
 
     @include only-tablet {
       padding-top: 40px;
-      padding-bottom: 124px;
+      padding-bottom: 80px;
     }
 
     @include only-desktop {
       padding-top: 60px;
-      padding-bottom: 144px;
+      padding-bottom: 100px;
     }
   }
 
   &__swiper {
-    margin: 0 auto 40px;
-    width: 280px;
+    margin: 0 auto;
+
+    width: 300px;
     height: 478px;
+
+    @include less-then-desktop {
+      margin-left: -5px;
+    }
 
     @include only-tablet {
       width: 704px;
@@ -61,11 +66,13 @@
   }
 
   &__item {
+    // margin-right: 5px;
+    // margin-left: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    width: 100%;
+    width: 300px;
   }
 
   //   Thumb for image
