--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -33,21 +33,29 @@
   <!-- Mobile menu -->
   <ul class="list mobile-menu__list">
     <li class="mobile-menu__item">
-      <a href="index.html" class="link mobile-menu__link">Home</a>
+      <a href="index.html" class="link mobile-menu__link js-menu-link-home"
+        >Home</a
+      >
     </li>
     <li class="mobile-menu__item">
-      <a href="#about" class="link mobile-menu__link">How it’s made?</a>
+      <a href="#about" class="link mobile-menu__link js-menu-link-about"
+        >How it’s made?</a
+      >
     </li>
     <li class="mobile-menu__item">
-      <a href="#products" class="link mobile-menu__link">Our products</a>
+      <a href="#products" class="link mobile-menu__link js-menu-link-products"
+        >Our products</a
+      >
     </li>
     <li class="mobile-menu__item">
-      <a href="#contacts" class="link mobile-menu__link">Contact</a>
+      <a href="#contacts" class="link mobile-menu__link js-menu-link contacts"
+        >Contact</a
+      >
     </li>
   </ul>
   <!-- Button Buy now -->
   <button
-    class="btn btn-buy-now mobile-menu__buy-now js-open-modal"
+    class="btn btn-buy-now mobile-menu__buy-now js-open-modal js-menu-buy-now-btn"
     data-modal="1"
   >
     Buy now
