--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -7,6 +7,8 @@
   line-height: 1.2857142857;
   border-radius: 10px;
   color: #000000;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-how-its-made:focus, .modal-location__open-map-btn:focus, .btn-read-more:focus,
 .btn-locations:focus,
@@ -18,9 +20,12 @@
   background-color: transparent;
   color: #131313;
   border: 2px solid #f8d24e;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-products:hover, .btn-franchise:hover, .btn-products:focus, .btn-franchise:focus {
   border-color: #0a8817;
+  box-shadow: 5px 5px 10px rgba(248, 210, 78, 0.5);
 }
 
 .modal-location__open-map-btn, .btn-read-more,
@@ -28,6 +33,9 @@
 .btn-buy-now {
   background-color: #f8d24e;
   border: 2px solid #f8d24e;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-location__open-map-btn:hover, .btn-read-more:hover,
 .btn-locations:hover,
@@ -36,11 +44,15 @@
 .btn-buy-now:focus {
   background-color: #0a8817;
   border-color: #0a8817;
+  box-shadow: 5px 5px 10px rgba(248, 210, 78, 0.5);
 }
 
 .btn-how-its-made {
   background-color: transparent;
   border: none;
+}
+.btn-how-its-made:hover, .btn-how-its-made:focus {
+  text-shadow: 5px 5px 10px rgba(248, 210, 78, 0.5);
 }
 
 .modal-location__open-map-btn, .btn-how-its-made, .btn-products {
@@ -84,16 +96,19 @@
   }
 }
 
-.products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
+.modal__circle-ingredients--chocolate::before, .modal__circle-ingredients--yellow::before, .modal__circle-ingredients--green::before, .modal__product-circle--chocolate::before, .modal__product-circle--yellow::before, .modal__product-circle--green::before, .products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
   content: "";
   position: absolute;
-  top: -11px;
   left: 0;
-  width: 200px;
-  height: 200px;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
+  top: -11px;
+  width: 200px;
+  height: 200px;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
@@ -109,15 +124,9 @@
 }
 
 .modal__circle-ingredients--chocolate::before, .modal__circle-ingredients--yellow::before, .modal__circle-ingredients--green::before, .modal__product-circle--chocolate::before, .modal__product-circle--yellow::before, .modal__product-circle--green::before {
-  content: "";
-  position: absolute;
   top: -7px;
-  left: 0;
   width: 132px;
   height: 132px;
-  border-radius: 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .advantages__icon-bg--ice-crema::before, .advantages__icon-bg--weight::before, .advantages__icon-bg--cow::before {
@@ -928,7 +937,7 @@ body {
   align-items: center;
   width: 280px;
   border-radius: 24px;
-  transition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .products__item {
@@ -1083,7 +1092,7 @@ body {
 }
 .products__arrow-icon {
   fill: #131313;
-  transition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .products__arrow:hover .products__arrow-icon {
   fill: #fcfcfc;
@@ -2180,8 +2189,8 @@ footer {
   width: 100%;
   height: 100%;
   background-color: rgba(171, 171, 171, 0.8);
-  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* === COMMON STYLES OF MODAL WINDOWS === */
@@ -2233,7 +2242,7 @@ footer {
 }
 .modal__close-icon {
   fill: #131313;
-  transition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) {
   .modal__close-icon {
@@ -2420,7 +2429,7 @@ footer {
 }
 .modal__product-item--green, .modal__product-item--yellow, .modal__product-item--chocolate {
   background-color: transparent;
-  transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__product-item--green {
   border-color: #aec6a5;
@@ -2853,7 +2862,7 @@ footer {
   border-radius: 50%;
   font: bold 20px monospace;
   transition: opacity 500ms, transform 500ms;
-  transition: color 1000ms cubic-bezier(0.4, 0, 0.2, 1), background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) {
   #scroll-btn {
