--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -174,7 +174,7 @@
       box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
 
       &::before {
-        @extend %product-img;
+        @extend %product-img-section;
         background-image: url(../images/products/png/product-tablet-mobile1-200.png);
         @include pixel-ratio-2x {
           background-image: url(../images/products/png/product-tablet-mobile1-@2x-400.png);
@@ -194,7 +194,7 @@
       box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
 
       &::before {
-        @extend %product-img;
+        @extend %product-img-section;
         background-image: url(../images/products/png/product-tablet-mobile2-200.png);
         @include pixel-ratio-2x {
           background-image: url(../images/products/png/product-tablet-mobile2-@2x-400.png);
@@ -214,7 +214,7 @@
       box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
 
       &::before {
-        @extend %product-img;
+        @extend %product-img-section;
         background-image: url(../images/products/png/product-tablet-mobile3-200.png);
         @include pixel-ratio-2x {
           background-image: url(../images/products/png/product-tablet-mobile3-@2x-400.png);
