--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -80,7 +80,7 @@
   }
 }
 
-// Mixin for button border styles
+// Mixin for button border styles ???
 
 @mixin button-border($btnBorderColor) {
   border: 2px solid $btnBorderColor;
@@ -94,7 +94,7 @@
   align-items: center;
 }
 
-// Transition by hover and focus
+// Transition by hover and focus ???
 
 @mixin my-transition($property) {
   transition: $property 2500ms cubic-bezier(0.4, 0, 0.2, 1);
