--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -397,6 +397,7 @@ body {
 .logo {
   width: 40px;
   height: 37px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .logo {
@@ -409,6 +410,9 @@ body {
     width: 60px;
     height: 65px;
   }
+}
+.logo:hover, .logo:focus {
+  transform: scale(1.2);
 }
 .logo-img {
   width: 100%;
