--- a/src/sass/layout/_logo.scss
+++ b/src/sass/layout/_logo.scss
@@ -3,6 +3,7 @@
 .logo {
   width: 40px;
   height: 37px;
+  transition: $myTransformTransition;
 
   @include only-tablet {
     width: 48px;
@@ -12,6 +13,11 @@
   @include only-desktop {
     width: 60px;
     height: 65px;
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.2);
   }
 
   &-img {
