--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -88,9 +88,15 @@
 
 // Flex-center-2-axis
 
-@mixin flex-center() {
+@mixin flex-centered() {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+@mixin flex-spaced-between() {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
