--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -103,14 +103,8 @@
     position: relative;
 
     padding: 123px 40px 16px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
+    @include flex-spaced-between-vertical;
     width: $cardWidthMobile;
-
     border-radius: 24px;
     transition: $myBoxShadowTransition;
 
@@ -128,18 +122,33 @@
 
     &--green {
       background-color: $colorGreen;
+      transition: $myBoxShadowTransition;
+
+      &:hover .products__circle {
+        box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.75);
+      }
     }
 
     &--yellow {
       background-color: $colorYellow;
+      transition: $myBoxShadowTransition;
+
+      &:hover .products__circle {
+        box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.75);
+      }
     }
 
     &--brown {
       background-color: $colorChocolate;
+      transition: $myBoxShadowTransition;
+
+      &:hover .products__circle {
+        box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.75);
+      }
     }
 
     &:hover {
-      box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.15);
+      box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.5);
     }
   }
 
