--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1810,6 +1810,8 @@ body {
   text-align: left;
   background-color: #fcfcfc;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (max-width: 767px) {
   .contacts__item {
@@ -1825,6 +1827,10 @@ body {
   .contacts__item {
     padding: 40px;
   }
+}
+.contacts__item:hover, .contacts__item:focus {
+  box-shadow: 0px 8px 30px rgba(10, 136, 23, 0.5);
+  transform: scale(1.03);
 }
 .contacts__title {
   margin-bottom: 20px;
@@ -1929,6 +1935,7 @@ body {
   font-size: 12px;
   line-height: 1.5833333333;
   color: #131313;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts__contacts-link {
@@ -1941,6 +1948,9 @@ body {
     font-size: 16px;
     line-height: 1.5;
   }
+}
+.contacts__contacts-link:hover, .contacts__contacts-link:focus {
+  color: #d6936d;
 }
 .contacts__button-list {
   display: flex;
