--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -48,7 +48,7 @@
       >
     </li>
     <li class="mobile-menu__item">
-      <a href="#contacts" class="link mobile-menu__link js-menu-link contacts"
+      <a href="#contacts" class="link mobile-menu__link js-menu-link-contacts"
         >Contact</a
       >
     </li>
