--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -103,7 +103,10 @@
     position: relative;
 
     padding: 123px 40px 16px;
-    @include flex-spaced-between-vertical;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     width: $cardWidthMobile;
     border-radius: 24px;
     transition: $myBoxShadowTransition;
