scroll-to-top button updated

--- a/src/partials/scroll-to-top-button.html
+++ b/src/partials/scroll-to-top-button.html
@@ -1,3 +1,6 @@
 <!-- Scroll to top button -->
-<!-- https://w3collective.com/scroll-to-top-button-javascript/ -->
-<button type="button" class="btn" id="scroll-btn"></button>
+<button type="button" class="btn" id="scroll-btn">
+  <svg class="btn__icon">
+    <use href="./images/icons/arrow-up.svg#icon-arrow-up"></use>
+  </svg>
+</button>
