--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,6 +21,7 @@
           target="_blank"
           rel="noopener nofollow noreferrer"
           href="https://github.com/"
+          aria-label="link to GitHub page"
         >
           <svg class="footer__sl-icon" width="20" height="20">
             <use href="./images/icons/svg-icons.svg#icon-github"></use>
@@ -33,6 +34,7 @@
           target="_blank"
           rel="noopener nofollow noreferrer"
           href="https://web.telegram.org/"
+          aria-label="link to telegram channel"
         >
           <svg class="footer__sl-icon" width="20.4" height="15.87">
             <use href="./images/icons/svg-icons.svg#icon-telegram"></use>
@@ -45,6 +47,7 @@
           target="_blank"
           rel="noopener nofollow noreferrer"
           href="https://www.facebook.com/"
+          aria-label="link to Facebook page"
         >
           <svg class="footer__sl-icon" width="9.35" height="20.4">
             <use href="./images/icons/svg-icons.svg#icon-facebook"></use>
