--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,6 +38,7 @@
     <!-- Mobile menu open button -->
     <button
       class="btn mobile-menu-open js-open-menu"
+      aria-label="Mobile menu open button"
       aria-expanded="false"
       aria-controls="mobile-menu"
     >
