--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -68,7 +68,7 @@
               class="modal__form-input"
               type="text"
               name="user-name"
-              id="user-name"
+              id="user-name-buy-now"
               placeholder="Name"
               pattern="[A-Z][a-z]{1,20}"
               title="Type your name in English, start with uppercase letter and do not exceed 20 letters"
@@ -83,7 +83,7 @@
               class="modal__form-input"
               type="tel"
               name="user-phone"
-              id="user-phone"
+              id="user-phone-buy-now"
               placeholder="Phone"
               pattern="\(?(\d{3})\)?[-\s]?(\d{3})[-\s]?(\d{2})[-\s]?(\d{2})"
               title="Type (000) 000-00-00 or (000) 000 00 00"
