--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -96,7 +96,7 @@
               class="modal__form-input"
               type="text"
               name="user-name"
-              id="user-name"
+              id="user-name-chocolate-ice-cream"
               placeholder="Name"
               pattern="[A-Z][a-z]{1,20}"
               title="Type your name in English, start with uppercase letter and do not exceed 20 letters"
@@ -111,7 +111,7 @@
               class="modal__form-input"
               type="tel"
               name="user-phone"
-              id="user-phone"
+              id="user-phone-chocolate-ice-cream"
               placeholder="Phone"
               pattern="\(?(\d{3})\)?[-\s]?(\d{3})[-\s]?(\d{2})[-\s]?(\d{2})"
               title="Type (000) 000-00-00 or (000) 000 00 00"
@@ -238,7 +238,7 @@
               class="modal__form-input"
               type="text"
               name="user-name"
-              id="user-name"
+              id="user-name-chocolate-ice-coffee"
               placeholder="Name"
               pattern="[A-Z][a-z]{1,20}"
               title="Type your name in English, start with uppercase letter and do not exceed 20 letters"
@@ -253,7 +253,7 @@
               class="modal__form-input"
               type="tel"
               name="user-phone"
-              id="user-phone"
+              id="user-phone-chocolate-ice-coffee"
               placeholder="Phone"
               pattern="\(?(\d{3})\)?[-\s]?(\d{3})[-\s]?(\d{2})[-\s]?(\d{2})"
               title="Type (000) 000-00-00 or (000) 000 00 00"
@@ -380,7 +380,7 @@
               class="modal__form-input"
               type="text"
               name="user-name"
-              id="user-name"
+              id="user-name-vanilla-milkshake"
               placeholder="Name"
               pattern="[A-Z][a-z]{1,20}"
               title="Type your name in English, start with uppercase letter and do not exceed 20 letters"
@@ -395,7 +395,7 @@
               class="modal__form-input"
               type="tel"
               name="user-phone"
-              id="user-phone"
+              id="user-phone-vanilla-milkshake"
               placeholder="Phone"
               pattern="\(?(\d{3})\)?[-\s]?(\d{3})[-\s]?(\d{2})[-\s]?(\d{2})"
               title="Type (000) 000-00-00 or (000) 000 00 00"
