--- a/src/partials/scroll-to-top-button.html
+++ b/src/partials/scroll-to-top-button.html
@@ -1,5 +1,5 @@
 <!-- Scroll to top button -->
-<button type="button" class="btn" id="scroll-btn">
+<button type="button" class="btn" id="scroll-btn" aria-label="scroll-to-top button" >
   <svg class="btn__icon">
     <use href="./images/icons/arrow-up.svg#icon-arrow-up"></use>
   </svg>
