--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,7 +11,7 @@
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
           natural stabilizer
         </p>
-        <button class="btn products__arrow js-open-modal" data-modal="3">
+        <button class="btn products__arrow js-open-modal" aria-label="ice cream order open button" data-modal="3">
           <svg class="products__arrow-icon" width="40" height="16">
             <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
           </svg>
@@ -24,7 +24,7 @@
           Fragrant invigorating drink created from 100% natural ingredients
           without the use of preservatives and flavor enhancers
         </p>
-        <button class="btn products__arrow js-open-modal" data-modal="4">
+        <button class="btn products__arrow js-open-modal" aria-label="ice coffee order open button" data-modal="4">
           <svg class="products__arrow-icon" width="40" height="16">
             <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
           </svg>
@@ -37,7 +37,7 @@
           Sweet drinks based on milk and ice cream, supplemented with syrups,
           fruits, berries and other sweets of your choice
         </p>
-        <button class="btn products__arrow js-open-modal" data-modal="5">
+        <button class="btn products__arrow js-open-modal" aria-label="milkshakes order open button" data-modal="5">
           <svg class="products__arrow-icon" width="40" height="16">
             <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
           </svg>
